--- a/index.html
+++ b/index.html
@@ -287,6 +287,7 @@
 		<script type="text/javascript" src="js/contact-tel.js"></script>
 		<script type="text/javascript" src="js/parallax.js"></script>
 		<script type="text/javascript" src="js/menu-responsive.js"></script>
+		<script type="text/javascript" src="js/form.js"></script>
 				
 	</body>
 </html>
