modification background color section prallax et replacment divider footer

--- a/index.html
+++ b/index.html
@@ -263,7 +263,6 @@
 
 			<!--fin partie téléphone, mail, horaire------------->
 		</section>
-		<div class="divider"></div>
 		<!--- test scrollup---->
 		<div class="scrollup" id="scrollUp"> <a href="#top-header">Retour</a></div>
 
@@ -274,7 +273,8 @@
 
 
 
-   		<footer class="down_page">
+   		<footer class="down-page">
+		<div class="divider"></div>
 			<p>Ce site est réalisé par Web-byrom @copyright 2019</p>
 		</footer>
 		
