--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
 					<a href="#Pourquoi">Pourquoi?</a>
 					<a href="#Realisations">Les Réalisations</a>
 					<a href="#Contactez-moi">Contact</a>
-					<!--<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+	 				<!--<a href="javascript:void(0);" class="icon" onclick="myFunction()">
 						<i class="fa fa-bars"></i>
 					</a>-->
 				</nav>
 			</div>
 		</header>
 		<section class="parallax-1" id="top-header">
+			<h1>Developpeur Web sur Lyon</h1>
 			<div class="parallax"></div>
 		</section>
 
