--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</div>
 		</header>
 		<section class="parallax-1" id="top-header">
-			<h1>Developpeur Web sur Lyon</h1>
+			<h1>Developpeur Web sur Lyon et sa région</h1>
 			<div class="parallax"></div>
 		</section>
 
