--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			</div>
 		</header>
 		<section class="parallax-1" id="top-header">
-			<h1>Developpeur Web sur Lyon et sa région</h1>
+				<h1>Developpeur Web sur Lyon et sa région</h1>
 			<div class="parallax"></div>
 		</section>
 
@@ -290,6 +290,7 @@
 		<script type="text/javascript" src="js/parallax.js"></script>
 		<script type="text/javascript" src="js/menu-responsive.js"></script>
 		<script type="text/javascript" src="js/form.js"></script>
+		<script type="text/javascript" src="js/tittle.js"></script>
 				
 	</body>
 </html>
