ajout mentions légales et responsive titre

--- a/index.html
+++ b/index.html
@@ -277,7 +277,12 @@
 
    		<footer class="down-page">
 		<div class="divider"></div>
-			<p>Ce site est réalisé par Web-byrom @copyright 2019</p>
+			<p>Ce site est réalisé par Web-byrom @copyright 2019
+			<span class="mentions">
+			<a href="mentions-legales.html" target="_blank" >Mentions légales</a>
+			</span>
+
+			</p>
 		</footer>
 		
 		<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
