rajout meta google et modifi robots.txt

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Web-byrom,Developpement Web,Création de Site Internet sur la région Rhône-Alpes</title>
 		<meta charset="utf-8">
+		<meta name="google" content="xxxx">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Developpeur Web,création de Site Internet, réparation et Dépannage">
 		<link rel="shortcut icon" href="favicon.ico" >
