meta google sur index html rajout variable coleur css modificatin robots.txt

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="google" content="xxxx">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="Developpeur Web,création de Site Internet, réparation et Dépannage">
+		<meta name="google-site-verification" content="Q7kZB7nnwrIjDchFXiHeU7-Zks5TD1hnZVfh7ECV6_s" />
 		<link rel="shortcut icon" href="favicon.ico" >
   		<link rel="icon" type="image/gif" href="animated_favicon1.gif" >
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
