modification prestation langages et outils avec responsive 400px modification h3 suppr padding 30 left right

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="fr">
 	<head>
-		<title>Web-byrom,Developpement Web,Création de Site Internet sur la région Rhône-Alpes</title>
+		<title>Web-byrom,Developpeur Web,création de Site Internet, site vitrine, portfolio, e-commerce</title>
 		<meta charset="utf-8">
 		<meta name="google" content="xxxx">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Developpeur Web,création de Site Internet, réparation et Dépannage">
+		<meta name="description" content="Developpeur Web,création de Site Internet, site vitrine, portfolio, e-commerce">
 		<meta name="google-site-verification" content="Q7kZB7nnwrIjDchFXiHeU7-Zks5TD1hnZVfh7ECV6_s" />
 		<link rel="shortcut icon" href="favicon.ico" >
   		<link rel="icon" type="image/gif" href="animated_favicon1.gif" >
@@ -52,14 +52,14 @@
 				<div class="flip-card">
 					<div class="flip-card-inner">
 						<div class="flip-card-front">
-							<h3>Création et refonte de sites internet</h3>
+							<h3>Création de sites internet, refonte</h3>
 							<img class="img_flip" src="images/creation_350.jpg" alt="maquette" >
 						</div>
 						<div class="flip-card-back">
-							<h3>Création et refonte de sites internet</h3> 
+							<h3>Création de sites internet, refonte</h3> 
 							<p>Web-ByRom est à votre écoute afin de vous proposer un projet adapté à vos besoins tout en respectant votre budget.</p>
-							<p>Nous vous conseillons si nécessaire sur le contenu de votre site et sa présentation selon votre secteur d'activité et en tenant compte de son objectif (vendre, se faire connaitre, informer..).</p>
-							<p>Nous intervenons pour toute sorte de client : particuliers, artisans, commerçants, professions libérales, collectivités, associations...</p> 
+							<p>Nous vous conseillons si nécessaire sur le contenu de votre site et sa présentation selon votre secteur d'activité et en tenant compte de son objectif (e-commerce, site vitrine, portfolio).</p>
+							<p>Nous intervenons pour toute sorte de client : particuliers, PME, PMI, professions libérales, collectivités, associations.</p> 
 						</div>
 					</div>
 				</div>
@@ -70,7 +70,7 @@
 					<div class="flip-card-inner">
 						<div class="flip-card-front">
 							<h3>maintenance et hebergement web</h3>
-							<img class="img_flip" src="images/hebergement_350.jpg" alt="datacenter">
+							<img class="img_flip" src="images/hebergement_350.jpg" alt="Serveur Web">
 						</div>
 						<div class="flip-card-back">
 							<h3>Maintenance et hébergement web</h3> 
@@ -83,20 +83,72 @@
 				<div class="flip-card">
 					<div class="flip-card-inner">
 						<div class="flip-card-front">
-							<h3>dépannage et installation de materiel</h3>
+							<h3>Les langages/CMS/Outils</h3>
 							<img class="img_flip" src="images/réparation_350.jpg" alt="réparation">
 						</div>
 						<div class="flip-card-back">
-							<h3>Dépannage et installation de matériel</h3> 
+							<h3>Les langages/CMS/Outils</h3> 
+							<p class="tools">
+								<ul class="langages">
+									<li>
+										<img src="images/site-web-html5.png" alt="logo-html5">
+										<span class="logo-langages">HTML5</span>
+									</li>
 
-							<p>Nous installons ou réinstallons votre système, votre accès internet ou vos périphériques. Nous nous occupons également des mises à jour logicielles ( systeme, antivirus..)
+									<li>
+										<img src="images/logo-css.png" alt="logo-css">
+										<span class="logo-langages">CSS3</span></li>
+									<li>
+										<img src="images/logo-PHP.png" class="logo-PHP" alt="logo-PHP">
+										<span class="logo-langages">PHP</span>
+									</li>
+									<li>
+										<img src="images/logo-jquery-8.png" alt="logo-jquery">
+										<span class="logo-langages">jQuery</span>
+									</li>
+									<li>
+										<img src="images/logo-js.png" alt="logo-js">
+										<span class="logo-langages">JavaScript</span>
+									</li>
+									<li>
+										<img src="images/logo-bootstrap.png" alt="logo-bootstrap">
+										<span class="logo-langages">Bootstrap</span>
+									</li>
+								</ul>
+								<ul class="cms">
+									<li>
+										<img src="images/logo-drupal.png" alt="logo-drupal">
+										<span class="logo-cms">Drupal</span>
+									</li>
+									<li>
+										<img src="images/logo-wordpress.png" alt="logo-wordpress">
+										<span class="logo-cms">Wordpress</span>
+									</li>
+									<li>
+										<img src="images/logo-prestashop.png" alt="logo-prestashop">
+										<span class="logo-cms">Prestashop</span>
+									</li>
+									<li>
+										<img src="images/logo-joomla.png" alt="logo-joomla">
+										<span class="logo-cms">Joomla</span>
+									</li>
+								</ul>
+								<ul class="soft">
+									<li>
+										<img src="images/logo-git.png" alt="logo-git">
+										<span class="logo">Git</span>
+									</li>
+									<li>
+										<img src="images/logo-photoshop.png" alt="logo-photoshop">
+										<span class="logo">Photoshop</span>
+									</li>
+									<li>
+										<img src="images/logo-illustrator.png" alt="logo-illustrator">
+										<span class="logo">Illustrator</span>
+									</li>
+								</ul>
 							</p>
-							<p>
-								Nous dépannons et améliorons les performances de votre ordinateur en limitant si possible le coût de la réparation aux seules pièces défectueuses là où certains remplacent la totalité du matériel.
-							</p>
-							<p>
-								Enfin nous pouvons également désinfecter et nettoyer votre ordinateur des fichiers et virus indésirables.
-							</p>
+							
 						</div>
 					</div>
 				</div>
