--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 		</header>
 		<section class="parallax-1" id="top-header">
-				<h1>Création de sites Web sur Lyon et sa région</h1>
+				<h1>Création de sites Internet sur Lyon et l'Ouest Lyonnais</h1>
 			<div class="parallax"></div>
 		</section>
 
