--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="fr">
 	<head>
-		<title>Web-byrom,Developpeur Web,création de Site Internet, site vitrine, portfolio, e-commerce</title>
+		<title>Création de Site Internet, Auvergne Rhône-Alpes, site vitrine, portfolio, e-commerce, PME, developpeur web</title>
 		<meta charset="utf-8">
 		<meta name="google" content="xxxx">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="Developpeur Web,création de Site Internet, site vitrine, portfolio, e-commerce">
+		<meta name="description" content="Création de Site Internet, Auvergne Rhône-Alpes, site vitrine, portfolio, e-commerce, PME, developpeur web">
 		<meta name="google-site-verification" content="Q7kZB7nnwrIjDchFXiHeU7-Zks5TD1hnZVfh7ECV6_s" />
 		<link rel="shortcut icon" href="favicon.ico" >
   		<link rel="icon" type="image/gif" href="animated_favicon1.gif" >
