modification fonction horaire

--- a/index.html
+++ b/index.html
@@ -292,8 +292,11 @@
 				<p class="contact-mail">contact@web-byrom.com</p>
 
 			</div>
+			<div class="button-horaire">
+				<input type="submit" class="button1 " value="Les horaires ? C'est ici !">
+			</div>
 			<div class="horaire">
-				<table>
+				<table class="horaire2">
 					<tr class="line-day">
 						<td class="days">Lundi</td>
 						<td class="days">Mardi</td>
