fonction H1 responsive a finir suivant les tailles

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 	<link rel="stylesheet"  type="text/js" href="js/car.js">
+	<link rel="stylesheet"  type="text/js" href="js/tittle1.js">
 	<link rel="stylesheet"  type="text/js" href="js/up.js">
 	<link rel="stylesheet" type="text/js" href="js/horaire.js">
 <!--	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
@@ -37,8 +38,8 @@
 </a>-->
 </nav>
 </div>
-</header>
 <section class="parallax-1" id="top-header">
+</header>
 	<h1>Création de site Internet en Auvergne Rhône Alpes</h1>
 	<div class="parallax"></div>
 </section>
@@ -346,7 +347,7 @@
 		<script type="text/javascript" src="js/parallax.js"></script>
 		<script type="text/javascript" src="js/menu-responsive.js"></script>
 		<script type="text/javascript" src="js/form.js"></script>
-		<script type="text/javascript" src="js/tittle.js"></script>
+		<script type="text/javascript" src="js/tittle1.js"></script>
 		<script type="text/javascript" src="js/horaire.js"></script>
 	</body>
 </html>
