ajout mailto sur contact

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 			<!--- partie téléphone, mail, horaire------------->
 			<div class="tel">
 				<p class="contact-tel"> 06.37.77.89.22</p>
-				<p class="contact-mail">contact@web-byrom.com</p>
+				<a href="mailto:contact@web-byrom.com"><p class="contact-mail">contact@web-byrom.com</p></a>
 
 			</div>
 			<div class="button-horaire">
